# puffoagent

./: .gitignore  .gitmodules  CHANGELOG.md  DESIGN.md  LICENSE  README.md  config.example.yml  main.py  pyproject.toml  requirements.txt  start.bat  start.sh
.github/workflows/: ci.yml  release.yml
agent-core/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
agent-core/crates/agent-native/: Cargo.toml
agent-core/crates/agent-native/src/: lib.rs
agent-core/scripts/: assert-release-profile.mjs  bootstrap-macos.sh  build-native.mjs  check-core-upstream-patch.mjs  check-pack-manifest.mjs  export-core-upstream-patch.mjs  make-bin-executable.mjs  smoke-package.mjs
agent-core/src/: types.ts
agent-core/src/api/: auth.ts  errors.ts  routes.agents.ts  routes.health.ts  routes.logs.ts  routes.pairing.ts  routes.providers.ts  server.ts
agent-core/src/cli/: doctor.ts  index.ts  rotate-token.ts  start.ts  stop.ts  version.ts
agent-core/src/config/: defaults.ts
agent-core/src/daemon/: daemon.ts  lifecycle.ts  lockfile.ts  supervisor.ts
agent-core/src/doctor/: claude-detector.ts  codex-detector.ts  detector.ts  network-detector.ts  node.ts  os.ts  provider-detector.ts  sandbox-detector.ts
agent-core/src/logs/: log-store.ts  logger.ts  redact.ts
agent-core/src/messaging/: delivery.ts  message-context.ts  message-filter.ts  message-loop.ts  message-router.ts  reply.ts
agent-core/src/native/: cli-core.ts  core.ts  sidecar-core.ts
agent-core/src/pairing/: server-pairing.ts
agent-core/src/platform/: agent-id.ts  core-identity.ts  core-slug.ts  os.ts  pairing-confirm.ts  pairing-id.ts  pairing-nonce.ts  pairing-token.ts  paths.ts  safe-directory.ts  shell.ts
agent-core/src/policy/: access-mode.ts  denied-tools.ts  file-access.ts  network-access.ts  policy-resolver.ts  policy.ts  provider-config-paths.ts  provider-credentials.ts  sandbox.ts  workspace-policy.ts
agent-core/tests/: api-server.test.ts  cli-core.test.ts  cli-rotate-token.test.ts  cli-start.test.ts  cli-stop.test.ts  daemon.test.ts  delivery.test.ts  detector.test.ts  log-store.test.ts  package-metadata.test.ts  policy-resolver.test.ts  provider-command.test.ts  runtime-sidecar.test.ts  sidecar-core.test.ts  state-store.test.ts
agents/: default.md
docs/: AGENT_CORE_CI_WORKFLOW.yml  AGENT_CORE_CORE_UPSTREAM_HANDOFF.md  AGENT_CORE_IMPLEMENTATION_AUDIT.md  AGENT_CORE_LOCAL_API.md  AGENT_CORE_LOCAL_DEBUG_STARTUP.md  AGENT_CORE_MVP_DESIGN.md  AGENT_CORE_OWNER_NEXT_STEPS.md  AGENT_CORE_PAIRING_CONTRACT.md  AGENT_CORE_PRODUCTION_UNBLOCK_CHECKLIST.md  AGENT_CORE_REVIEW_HANDOFF.md  AGENT_CORE_SERVER_CONTRACT_NEEDED.md  AGENT_CORE_WEB_SIGNED_MVP.md  CLI_LOCAL_AGENT.md
docs/patches/: agent-core-core-upstream.base  agent-core-core-upstream.patch
memory/: README.md
skills/: README.md
tests/: conftest.py  test_agent_install.py  test_cli_session_recovery.py  test_docker_memory_limits.py  test_harness.py  test_hook_permission.py  test_host_credentials.py  test_host_sync.py  test_http_errors.py  test_mcp_helpers.py  test_permission_mode.py  test_permission_proxy.py  test_refresh_ping.py  test_resume_heap_cap.py  test_runtime_matrix.py  test_send_message_suppress.py  test_silent_and_self_mention.py  test_space_deleted.py  test_sync_id_collision.py
(+56 files in other folders)
