[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "puffoagent"
version = "0.1.1"
description = "Run AI bots on Puffo.ai — local daemon that supervises many bot accounts and handles their LLM loops."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Puffo.ai" },
]
keywords = ["puffo", "mattermost", "ai", "agent", "chatbot", "anthropic", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.9",
    "anthropic>=0.25",
    "openai>=1.30",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# pip install puffoagent[sdk]  — needed for agents with runtime.kind=sdk
sdk = ["claude-agent-sdk>=0.1.61"]
# cli-local / cli-docker adapters don't need extra Python deps; they
# shell out to the `claude` binary (cli-local) or Docker (cli-docker).

[project.urls]
Homepage      = "https://github.com/puffo-ai/puffoagent"
Source        = "https://github.com/puffo-ai/puffoagent"
Issues        = "https://github.com/puffo-ai/puffoagent/issues"
Releases      = "https://github.com/puffo-ai/puffoagent/releases"

[project.scripts]
puffoagent = "puffoagent.portal.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
